fix issue with rmt grid jumping when new entries are tabbed in small viewport

--- a/resource-mgmt/css/main.css
+++ b/resource-mgmt/css/main.css
@@ -58,7 +58,9 @@ body {
 }
 
 
-
+.ui-grid-viewport {
+	height: 70vh !important;
+}
 
 .line {
     font-size: 0;
